--- a/html-css/html/index.html
+++ b/html-css/html/index.html
@@ -47,9 +47,9 @@
             </li>
             <li>
                     Horno
-                    <ul>Precalentar el Horno en maximo durante 15 minutos</ul>
+                    <ul>Precalentar el Horno en temperatura maxima durante 15 minutos</ul>
                     <ul>40 minutos en Horno a 180 C</ul>
-                </li>
+            </li>
         </ol>
         <p></p>
         <h2>Probando imagen con una Ruta absoluta (Desde un link, la particularidad de una ruta absoluta es que se puede acceder dede cualquier sitio), achique la imagen a 500x500</h2>
