--- a/html-css/html/index.html
+++ b/html-css/html/index.html
@@ -47,8 +47,8 @@
             </li>
             <li>
                     Horno
-                    <ul>Precalentar el Horno en temperatura maxima durante 15 minutos</ul>
-                    <ul>40 minutos en Horno a 180 C</ul>
+                    <li>Precalentar el Horno en temperatura maxima durante 15 minutos</li>
+                    <li>40 minutos en Horno a 180 C</li>
             </li>
         </ol>
         <p></p>
