--- a/html-css/html/index.html
+++ b/html-css/html/index.html
@@ -4,82 +4,88 @@
         <title>Practicando HTML</title>
     </head>
     <body>
-        <h1 align=center>Esto es un h1, o titulo, alineado en el centro. Se recomienda usar uno solo por html</h1>
-        <p></p>
-        <h2 align=right>Esto seria un subtitulo alineado a la derecha</h2>
-        <p></p>
-        <p>Esto es un Parrafo, y el de abajo tambien</p>
-        <p></p>
-        <p>lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. vidit dissentiet eos cu eum an brute copiosae hendrerit. eos erant dolorum an. per facer affert ut. mei iisque mentitum moderatius cu. sit munere facilis accusam eu dicat falli consulatu at vis. te facilisis mnesarchum qui posse omnium mediocritatem est cu. modus argumentum ne qui tation efficiendi in eos. ei mea falli legere efficiantur et tollit aliquip debitis</p>
-        <p></p>
-        <h2>Lista sin ordern</h2>
-        <ul>
-            <li>Rojo</li>
-            <li>Azul</li>
-            <li>Violeta</li>
-        </ul>
-        <p></p>
-        <h2>Lista con ordern</h2>
-        <ol>
-            <li>Boca</li>
-            <li>River</li>
-            <li>Huracan</li>
-        </ol>
-        <p></p>
-        <h2>Como hacer una Torta. Esto es un ejemplo de una lista anidada (con varios niveles de jerarquia)</h2>
-        <ol>
-            <li>
-                Ingredientes
+        <h2>Titulos h1, h2, h3, h4, h5, h6</h2>
+        <div>
+            <h1 align=center>Esto es un h1, o titulo, alineado en el centro. Se recomienda usar uno solo por html</h1>
+            <h2 align=right>Esto seria un subtitulo alineado a la derecha</h2>
+        </div>
+        <h2>Parrafos</h2>
+        <div>
+            <p>Esto es un Parrafo, y el de abajo tambien</p>
+            <p>lorem ipsum dolor sit amet et delectus accommodare his consul copiosae legendos at vix ad putent delectus delicata usu. vidit dissentiet eos cu eum an brute copiosae hendrerit. eos erant dolorum an. per facer affert ut. mei iisque mentitum moderatius cu. sit munere facilis accusam eu dicat falli consulatu at vis. te facilisis mnesarchum qui posse omnium mediocritatem est cu. modus argumentum ne qui tation efficiendi in eos. ei mea falli legere efficiantur et tollit aliquip debitis</p>
+         </div>
+                <h2>Listas</h2>
+                <div>
+            <h2>Lista sin ordern</h2>
                 <ul>
-                    <li>Harina</li>
-                    <li>Huevos</li>
-                    <li>Azucar</li>
-                    <li>Leche</li>
+                    <li>Rojo</li>
+                    <li>Azul</li>
+                    <li>Violeta</li>
                 </ul>
-            </li>
-            <li>
-                Preparacion
-                <ul>
-                    <li>Mezclar los ingredientes humedos (Huevos y Leche)</li>
-                    <li>Agregar los secos (Harina y Azucar)</li>
-                    <li>Incorporar</li>
-                </ul>
-            </li>
-            <li>
-                Horno
-                <ul>
-                    <li>Precalentar el Horno en temperatura maxima durante 15 minutos</li>
-                    <li>40 minutos en Horno a 180 C</li>
-                </ul>
-            </li>
-        </ol>
-        <p></p>
-        <h2>Probando imagen con una Ruta absoluta (Desde un link, la particularidad de una ruta absoluta es que se puede acceder dede cualquier sitio), achique la imagen a 500x500</h2>
-        <img width="500" height="500" src="https://i.kym-cdn.com/entries/icons/original/000/031/003/cover3.jpg" alt="Mike W meme">
-        <p></p>
-        <h2>Probando imagen con una ruta relativa (Depende de donde se encuentre el archivo en ese momento)</h2>
-        <img src="foto-prueba-html.jpg" alt="meme E">
-        <p></p>
-        <h2>Asi se ve en VSC</h2>
-        <img src="foto-prueba-html-2.jpg" alt="">
-        <p></p>
-        <h2>Probando enlaces</h2>
-        <a href="https://www.youtube.com/">Haga click aqui para ir a YouTube!</a>
-        <p></p>
-        <h2>Probando enlaces con Imagenes</h2>
-        <a href="https://www.google.com/">
-            <img src="https://bit.ly/2WDMapV" alt="Logo Google">
-        </a>
-        <p></p>
-        <h2>Probando iframe con ML</h2>
-        <iframe width="500" height="500" src="https://www.mercadolibre.com.ar/" frameborder="0"></iframe>
-        <p></p>
-        <h2>Probando iframes pre hechos, este caso un video de YouTube</h2>
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/kJZB7xFYtKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <p></p>
+                <h2>Lista con ordern</h2>
+                <ol>
+                    <li>Boca</li>
+                    <li>River</li>
+                    <li>Huracan</li>
+                </ol>
+                <h2>Como hacer una Torta. Esto es un ejemplo de una lista anidada (con varios niveles de jerarquia)</h2>
+                <ol>
+                    <li>
+                        Ingredientes
+                        <ul>
+                            <li>Harina</li>
+                            <li>Huevos</li>
+                            <li>Azucar</li>
+                            <li>Leche</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Preparacion
+                        <ul>
+                            <li>Mezclar los ingredientes humedos (Huevos y Leche)</li>
+                            <li>Agregar los secos (Harina y Azucar)</li>
+                            <li>Incorporar</li>
+                        </ul>
+                    </li>
+                    <li>
+                        Horno
+                        <ul>
+                            <li>Precalentar el Horno en temperatura maxima durante 15 minutos</li>
+                            <li>40 minutos en Horno a 180 C</li>
+                        </ul>
+                    </li>
+                </ol>
+         </div>
+         <h2>Imagenes</h2>
+         <div>
+            <h2>Probando imagen con una Ruta absoluta (Desde un link, la particularidad de una ruta absoluta es que se puede acceder dede cualquier sitio), achique la imagen a 500x500</h2>
+            <img width="500" height="500" src="https://i.kym-cdn.com/entries/icons/original/000/031/003/cover3.jpg" alt="Mike W meme">
+            <h2>Probando imagen con una ruta relativa (Depende de donde se encuentre el archivo en ese momento)</h2>
+            <img src="foto-prueba-html.jpg" alt="meme E">
+            <h2>Asi se ve en VSC</h2>
+            <img src="foto-prueba-html-2.jpg" alt="">
+        </div>
+        <h2>Enlaces</h2>
+        <div>
+            <h2>Probando enlaces</h2>
+            <a href="https://www.youtube.com/">Haga click aqui para ir a YouTube!</a>
+            <h2>Probando enlaces con Imagenes</h2>
+            <a href="https://www.google.com/">
+                <img src="https://bit.ly/2WDMapV" alt="Logo Google">
+            </a>
+        </div>
+        <h2>iframes</h2>
+        <div>
+            <h2>Probando iframe con ML</h2>
+            <iframe width="500" height="500" src="https://www.mercadolibre.com.ar/" frameborder="0"></iframe>
+            <h2>Probando iframes pre hechos, este caso un video de YouTube</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/kJZB7xFYtKg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
         <h2>Probando una etiqueta de audio</h2>
-        <audio width="400" controls>
-            <source src="atiendo-boludos.mp3" type="audio/mp3">
-        </audio>
+        <div>
+            <audio width="400" controls>
+                <source src="atiendo-boludos.mp3" type="audio/mp3">
+            </audio>
+        </div>
     </body>
 </html>
