Se agrego un detalle en al apunte de diseno adaptativo

--- a/html-css/diseno-adaptativo/index.html
+++ b/html-css/diseno-adaptativo/index.html
@@ -44,6 +44,9 @@
             </li>
         </ul>
         <img src="media-query.png" alt="Foto media-query">
+
+        <h2>Estandares</h2>
+        <img src="estandares.jpg" alt="Foto Estanderes">
         
     </main>
 </body>
